Add remaining content and add styling All content is added and majority of the styling is complete.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-1">
         <div class="header">
-        <a href="#"><img src="../landing-page-top/images/stork.jpg" class="home-logo"></a>
+        <a href="#"><img src="../landing-page-top/images/stork.jpg" class="home-logo" alt="An illustration of a stork that bears no meaning whatsoever"></a>
             <ul>
                 <li>header link one</li>
                 <li>header link two</li>
@@ -25,9 +25,50 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button>Sign up?</button>
             </div>
-            <img src="../landing-page-top/images/stork-image.jpg">
+            <img src="../landing-page-top/images/stork-image.jpg" alt="An image of a stork family that bears no meaning whatsoever">
         </div>
     </div>
 
+    <div class="container-2"> <!-- Make into a flex-column -->
+        <p>Some random information</p>
+        <div class="info-images">
+            <div class="info-text">
+                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <p>this is some subtext under a picture or an illustration</p>
+            </div>
+
+            <div class="info-text">
+                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <p>this is some subtext under a picture or an illustration</p>
+            </div>
+            <div class="info-text">
+                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <p>this is some subtext under a picture or an illustration</p>
+            </div>
+            <div class="info-text">
+                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <p>this is some subtext under a picture or an illustration</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-3"> <!--Turn into column, align quote with align-self-->
+        <p class="quote">This is an inspirational quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-name">-JJ Abraham Lincoln</p>
+    </div>
+
+    <div class="container-4">
+        <div class="signup">
+            <div class="signup-text">
+                <p class="its-time">Call to action! It's time!</p>
+                <p class="its-time-small">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="signup-button">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright @ The Odin Project 2021</p>
+    </div>
 </body>
 </html>
