Finish landing page top Finished project: landing page from the odin project.
Images in container-2 don't wrap, some suboptimal behaviour when resizing browser window.

Focused on layout in fullscreen mode.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>The Stork's nest</title>
+    <title>The Stork's Nest</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,17 +13,17 @@
     <div class="container-1">
         <div class="header">
         <a href="#"><img src="../landing-page-top/images/stork.jpg" class="home-logo" alt="An illustration of a stork that bears no meaning whatsoever"></a>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+        <ul>
+            <a href="#" class="header-link"><li>Services</li></a>
+            <a href="#" class="header-link"><li>About us</li></a>
+            <a href="#" class="header-link"><li>Contact</li></a>
+        </ul>
         </div>  
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Enter Hero Text Here!!</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up?</button>
+                <button class="signup-question-button">Sign up?</button>
             </div>
             <img src="../landing-page-top/images/stork-image.jpg" alt="An image of a stork family that bears no meaning whatsoever">
         </div>
@@ -53,8 +53,10 @@
     </div>
 
     <div class="container-3"> <!--Turn into column, align quote with align-self-->
+        <div class="quote-alignment">
         <p class="quote">This is an inspirational quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="quote-name">-JJ Abraham Lincoln</p>
+        </div>
     </div>
 
     <div class="container-4">
