Fix relative paths images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-1">
         <div class="header">
-        <a href="#"><img src="../landing-page-top/images/stork.jpg" class="home-logo" alt="An illustration of a stork that bears no meaning whatsoever"></a>
+        <a href="#"><img src="images/stork.jpg" class="home-logo" alt="An illustration of a stork that bears no meaning whatsoever"></a>
         <ul>
             <a href="#" class="header-link"><li>Services</li></a>
             <a href="#" class="header-link"><li>About us</li></a>
@@ -25,7 +25,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button class="signup-question-button">Sign up?</button>
             </div>
-            <img src="../landing-page-top/images/stork-image.jpg" alt="An image of a stork family that bears no meaning whatsoever">
+            <img src="images/stork-image.jpg" alt="An image of a stork family that bears no meaning whatsoever">
         </div>
     </div>
 
@@ -33,20 +33,20 @@
         <p>Some random information</p>
         <div class="info-images">
             <div class="info-text">
-                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <img src="images/car.jpg" alt="completely irrelevant image">
                 <p>this is some subtext under a picture or an illustration</p>
             </div>
 
             <div class="info-text">
-                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <img src="images/car.jpg" alt="completely irrelevant image">
                 <p>this is some subtext under a picture or an illustration</p>
             </div>
             <div class="info-text">
-                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <img src="images/car.jpg" alt="completely irrelevant image">
                 <p>this is some subtext under a picture or an illustration</p>
             </div>
             <div class="info-text">
-                <img src="../landing-page-top/images/car.jpg" alt="completely irrelevant image">
+                <img src="images/car.jpg" alt="completely irrelevant image">
                 <p>this is some subtext under a picture or an illustration</p>
             </div>
         </div>
