--- a/index.html
+++ b/index.html
@@ -1,76 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>The Stork's Nest</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div class="container-1">
-        <div class="header">
-        <a href="#"><img src="images/stork.jpg" class="home-logo" alt="An illustration of a stork that bears no meaning whatsoever"></a>
-        <ul>
-            <a href="#" class="header-link"><li>Services</li></a>
-            <a href="#" class="header-link"><li>About us</li></a>
-            <a href="#" class="header-link"><li>Contact</li></a>
-        </ul>
-        </div>  
-        <div class="hero-content">
-            <div class="hero-text">
-                <h1>Enter Hero Text Here!!</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="signup-question-button">Sign up?</button>
-            </div>
-            <img src="images/stork-image.jpg" alt="An image of a stork family that bears no meaning whatsoever">
+    <div class="header">
+        <h1>STORK COACHING</h1>
+        <div class="nav-bar">
+        <a href="#" class="button">Home</a>
+        <a href="#" class="button">Services</a>
+        <a href="#" class="button">About</a>
         </div>
     </div>
 
-    <div class="container-2"> <!-- Make into a flex-column -->
-        <p>Some random information</p>
-        <div class="info-images">
-            <div class="info-text">
-                <img src="images/car.jpg" alt="completely irrelevant image">
-                <p>this is some subtext under a picture or an illustration</p>
-            </div>
-
-            <div class="info-text">
-                <img src="images/car.jpg" alt="completely irrelevant image">
-                <p>this is some subtext under a picture or an illustration</p>
-            </div>
-            <div class="info-text">
-                <img src="images/car.jpg" alt="completely irrelevant image">
-                <p>this is some subtext under a picture or an illustration</p>
-            </div>
-            <div class="info-text">
-                <img src="images/car.jpg" alt="completely irrelevant image">
-                <p>this is some subtext under a picture or an illustration</p>
-            </div>
+    <div class="content">
+        <div class="content-box">
+            <h2>Current clients:</h2>
+            <p class="coaching-client">Adem Hachana</p>
+            <p class="coaching-client">David Stål</p>
+            <p class="coaching-client">Linus Gotenstam</p>
         </div>
-    </div>
-
-    <div class="container-3"> <!--Turn into column, align quote with align-self-->
-        <div class="quote-alignment">
-        <p class="quote">This is an inspirational quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quote-name">-JJ Abraham Lincoln</p>
+        <div class="content-box">
+            <h2>Available slots for coaching:</h2>
+            <p class="available-coaching"><em>Three</em> slots currently available</p>
         </div>
-    </div>
-
-    <div class="container-4">
-        <div class="signup">
-            <div class="signup-text">
-                <p class="its-time">Call to action! It's time!</p>
-                <p class="its-time-small">Sign up for our product by clicking that button right over there!</p>
-            </div>
-            <button class="signup-button">Sign up</button>
+        <div class="content-box">
+            <h2>Articles and upcoming events:</h2>
+            <article>
+                <h3>Tyngre Classic X</h3>
+                <h4>April 9th 2022</h4>
+                <p>I attended Tyngre Classic X as a coach together with Adem Hachana</p>
+            </article>
+            <article>
+                <h3>Junior SM Örebro</h3>
+                <h4>Powerlifting Swedish Championship Juniors</h4>
+                <p>I attended as a coach together with David Stål</p>
+            </article>
         </div>
     </div>
 
     <div class="footer">
-        <p>Copyright @ The Odin Project 2021</p>
+        <a href="#" class="button">More info</a>
+        <p>Copyright something something 2023</p>
     </div>
 </body>
 </html>
